--- a/.github/workflows/release-pgpool.yml
+++ b/.github/workflows/release-pgpool.yml
@@ -82,7 +82,7 @@ jobs:
           fi
 
       - name: Get branch name
-        run: echo "BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        run: echo "BRANCH=${GITHUB_REF##*/}-pgpool" >> $GITHUB_ENV
 
       - name: Update Singularity file tag
         run: |
@@ -98,7 +98,7 @@ jobs:
             sudo -E singularity build container.sif ${{ matrix.recipe }}
             tag=$(echo "${recipe/Singularity\./}")
             if [ "$tag" == "Singularity" ]; then
-                tag=$BRANCH-pgpool
+                tag=$BRANCH
             fi
             # Build the container and name by tag
             echo "Tag is $tag."
